--- a/Files/footer.css
+++ b/Files/footer.css
@@ -14,6 +14,9 @@
   height: 10%;
   border: 1px solid #09aeff;
   overflow: hidden;
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 :root {
   --clr: black;
