--- a/Files/header.css
+++ b/Files/header.css
@@ -1,8 +1,68 @@
+* {
+  border: 0px solid red;
+}
 .header {
   position: relative;
   display: flex;
+  justify-content: center;
+  align-items: center;
   align-self: flex-start;
   width: 100%;
   height: 10%;
-  border: 2px solid yellow;
+  border: 1px solid #09aeff;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.logoHeader {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 100%;
+  border: 0px solid red;
+  overflow: hidden;
+}
+.logoHeader img {
+  width: 70%;
+  height: 80%;
+  border-radius: 50px;
+}
+.siteNameHeader {
+  position: relative;
+  align-items: center;
+  display: flex;
+  width: 70%;
+  height: 100%;
+  border: 0px solid red;
+}
+.siteNameHeader a {
+  position: relative;
+  display: block;
+  color: white;
+  font-size: 1.3rem;
+  font-family: "Play", sans-serif;
+  text-decoration: none;
+  font-weight: bolder;
+  letter-spacing: 0.05rem;
+  transform: translate(-0.8rem, 0.1rem);
+}
+.siteNameHeader #C {
+  color: #09aeff;
+  font-size: 3.1rem;
+  transform: translateX(0);
+}
+
+.imgHeader {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 100%;
+  border: 0px solid red;
+}
+.imgHeader img {
+  width: 60%;
+  height: 60%;
+  border-radius: 20px;
 }
