--- a/Files/index.css
+++ b/Files/index.css
@@ -11,7 +11,7 @@
   width: 100%;
   height: 100vh;
   border: 0px solid red;
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.7);
   overflow: hidden;
 }
 .mobileCover {
@@ -21,7 +21,8 @@
   flex-wrap: wrap;
   width: 30%;
   height: 90%;
-  border: 0px solid red;
+  border: 1px solid #09aeff;
+  background-image: url(images/ocean.jpeg);
 }
 @media screen and (max-width: 500px) {
   .mobileCover {
