--- a/Files/body.css
+++ b/Files/body.css
@@ -23,7 +23,7 @@
   align-items: center;
   width: 100%;
   height: 15%;
-  border: 1px solid red;
+  border: 0px solid red;
 }
 .headingBody a {
   color: white;
@@ -47,34 +47,12 @@
   width: 100%;
   height: 85%;
   border: 0px solid white;
-  overflow: scroll;
-}
-.contentBody::-webkit-scrollbar {
-  width: 10px;
-  border-radius: 10px;
-  box-shadow: inset 0 0 8px black;
-  visibility: hidden;
-}
-.contentBody::-webkit-scrollbar-track {
-  background-color: transparent;
-  width: 10px;
-  height: 10px;
-}
-.contentBody::-webkit-scrollbar-thumb {
-  background: white;
-  width: 5px;
-  height: 2px;
-  border-radius: 50px;
-  border: 2px solid black;
-}
-.contentBody::-webkit-scrollbar-corner {
-  background-color: black;
-  width: 10px;
+  /* overflow: scroll; */
 }
 form {
   width: 85%;
   height: 85%;
-  min-height: 350px;
+  min-height: 400px;
   border: 1px solid white;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
