--- a/Files/index.css
+++ b/Files/index.css
@@ -50,22 +50,20 @@
     height: 100%;
   }
 }
+
 @media screen and (max-width: 450px) {
   html {
     font-size: 90%;
   }
-  .mobileCover {
-    width: 100%;
-    height: 100%;
-  }
 }
-@media screen and (max-width: 400px) {
+
+@media screen and (max-width: 370px) {
   html {
-    font-size: 70%;
+    font-size: 85%;
   }
-}
+} /*
 @media screen and (max-width: 300px) {
   html {
     font-size: 50%;
   }
-}
+} */
