--- a/Files/squad.css
+++ b/Files/squad.css
@@ -106,8 +106,8 @@
   flex-wrap: wrap;
   margin: 0.5rem 0;
   width: 90%;
-  height: 20%;
-  min-height: 90px;
+  height: 17%; /*20*/
+  min-height: 70px;
   border-radius: 50px;
   background-color: rgba(225, 225, 225, 0.5);
   box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
@@ -122,7 +122,7 @@
   display: block;
   color: black;
   margin-top: 0.5rem; /**/
-  font-size: 1.2rem;
+  font-size: 1.5rem; /*1.2*/
   font-family: "Baloo Bhaijaan 2", cursive;
   /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", 
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;*/
@@ -168,7 +168,7 @@
 }
 .matchStartBtn i {
   color: white;
-  font-size: 1rem;
+  font-size: 1.5rem;
   padding-right: 1rem;
 }
 .rematchBtn i {
@@ -204,6 +204,7 @@
   border-radius: 20px;
   background-color: transparent;
   color: white;
+  border: 1px solid black;
 }
 .matchStartBtn #matchResult {
   color: white;
