--- a/Files/index.css
+++ b/Files/index.css
@@ -33,13 +33,13 @@
     font-size: 0.8rem !important;
   }
   .navigator ul li a .iconText {
-    font-size: 1rem !important;
+    font-size: 1.1rem !important;
   }
   .navigator ul li.active a .iconText {
-    transform: translateY(0.4rem) !important;
+    transform: translateY(0.5rem) !important;
   }
   .navigator ul li.active a .icon {
-    transform: translateY(-1.1rem) !important;
+    transform: translateY(-1.3rem) !important;
   }
   .currentMatchName a {
     font-size: 2.1rem !important;
@@ -81,6 +81,10 @@
   #matchResult {
     font-size: 1.2rem !important;
   }
+  .profileList a {
+    font-size: 0.95rem !important;
+    font-weight: bold;
+  }
 }
 @media screen and (max-width: 700px) {
   html {
@@ -89,6 +93,10 @@
   .mobileCover {
     width: 80%;
     height: 100%;
+  }
+  .profileList a {
+    font-size: 1rem !important;
+    font-weight: bold;
   }
 }
 @media screen and (max-width: 500px) {
@@ -109,7 +117,7 @@
     font-size: 1.7rem !important;
   }
   .siteNameHeader #C {
-    font-size: 4rem !important;
+    font-size: 4.5rem !important;
   }
   .currentMatchName a {
     font-size: 2.65rem !important;
@@ -122,6 +130,23 @@
   .matchTeamName a,
   .matchCategory a {
     font-size: 1.6rem !important;
+  }
+  .profileList a {
+    font-size: 1.1rem !important;
+    font-weight: bold;
+  }
+
+  .navigator ul li a .icon {
+    font-size: 1.3rem !important;
+  }
+  .navigator ul li a .iconText {
+    font-size: 1.2rem !important;
+  }
+  .navigator ul li.active a .iconText {
+    transform: translateY(0.5rem) !important;
+  }
+  .navigator ul li.active a .icon {
+    transform: translateY(-1.3rem) !important;
   }
 }
 
@@ -136,10 +161,10 @@
     font-size: 2.5rem !important;
   }
   .siteNameHeader a {
-    font-size: 1.5rem !important;
+    font-size: 1.4rem !important;
   }
   .siteNameHeader #C {
-    font-size: 3rem !important;
+    font-size: 3.8rem !important;
   }
   .matchStartBtn,
   #matchResult {
@@ -161,7 +186,7 @@
     font-size: 1.4rem !important;
   }
   .siteNameHeader #C {
-    font-size: 2.7rem !important;
+    font-size: 4rem !important;
   }
   .currentMatchName a {
     font-size: 2.5rem !important;
@@ -169,6 +194,10 @@
   .matchStartBtn,
   #matchResult {
     font-size: 1.2rem !important;
+  }
+  .profileList a {
+    font-size: 1.2rem !important;
+    font-weight: bold;
   }
 }
 /*
