--- a/Files/curremtMatch.css
+++ b/Files/curremtMatch.css
@@ -32,8 +32,9 @@
 .matchHeading a {
   color: #09aef9;
   margin-top: 0rem;
-  font-size: 2rem;
-  padding: 0 2rem;
+  font-size: 2.7rem !important;
+  padding: 0 2.5rem;
+  letter-spacing: 0.05rem;
   font-family: "Play", sans-serif;
   /* font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif; */
