--- a/Files/tournamentHistory.css
+++ b/Files/tournamentHistory.css
@@ -131,7 +131,8 @@
   cursor: pointer;
   border: 1px solid white;
   background-color: rgba(45, 85, 205, 0.5);
-  padding: 0 0.5rem;
+  padding: 0rem 1rem;
+  /* margin-left: -0.5rem !important; */
 }
 #speakingBtn a {
   font-size: 1rem;
